exports[`filterReducer default 1`] = `
Object {
  "cityLoading": true,
  "cityMeetups": Object {},
  "userLoading": true,
  "userMeetups": Object {},
}
`;

exports[`filterReducer delete rsvp success 1`] = `
Object {
  "cityLoading": true,
  "cityMeetups": Object {},
  "userLoading": true,
  "userMeetups": Object {
    "1": Object {
      "5321673": Object {
        "name": "test",
      },
    },
  },
}
`;

exports[`filterReducer fetch meetups success 1`] = `
Object {
  "cityLoading": false,
  "cityMeetups": Object {
    "5321673": Object {
      "name": "test",
    },
  },
  "userLoading": true,
  "userMeetups": Object {},
}
`;

exports[`filterReducer fetch user meetups 1`] = `
Object {
  "cityLoading": true,
  "cityMeetups": Object {},
  "userLoading": true,
  "userMeetups": Object {},
}
`;

exports[`filterReducer fetch user meetups success 1`] = `
Object {
  "cityLoading": true,
  "cityMeetups": Object {},
  "userLoading": false,
  "userMeetups": Object {
    "5321673": Object {
      "name": "test",
    },
  },
}
`;

exports[`filterReducer fetch_meetups 1`] = `
Object {
  "cityLoading": true,
  "cityMeetups": Object {},
  "userLoading": true,
  "userMeetups": Object {},
}
`;
